# Citrine

./: CMakeLists.txt  README.md
citrine/: citrine.asm  citrine.c  citrine.h
docs/English/: README.md
docs/English/Assembly/: AccessFile.md  Close-Files.md  CloseFiles.md  FileStats.md  Open-and-Create-Files.md  OpenFiles.md  README.md  Read-Files.md  ReadFiles.md  RemoveFiles.md  Set-File-Permissions.md  SetPermissions.md  Write-Files.md  WriteFiles.md
docs/English/C/: Close-Files.md  Create-Files.md  Open-Files.md  README.md  Read-Files.md  Set-File-Permissions.md  Write-Files.md
docs/Portuguese/: README.md
docs/Portuguese/Assembly/: Abrir-e-Criar-Ficheiros.md  AbrirFicheiros.md  AcessarFicheiros.md  Definir-Permissões.md  DefinirPermissões.md  Escrever-Ficheiros.md  EscreverFicheiros.md  EstadoDosFicheiros.md  Fechar-Ficheiros.md  FecharFicheiros.md  Ler-Ficheiros.md  LerFicheiros.md  README.md  RemoverFicheiros.md
docs/Portuguese/C/: Abrir-Ficheiros.md  Criar-Ficheiros.md  README.md  (+4 more)
examples/: change_file_owner.c  check_permissions.c  copy_file.c  create_directory.c  create_nested_directory.c  examples.h  file_exists.c  get_file_size.c  get_filesystem_stats.c  list_files_in_directory.c  open_or_create_file.c  read_file_to_buffer.c  read_from_file.c  remove_directory.c  remove_file.c  rename_file.c  runner.c  set_file_permissions.c  sync_file.c  write_to_file.c
examples/Assembly/: close_file.asm  create_file.asm  file_exists.asm  file_stats.asm  open_file.asm  read_file.asm  remove_file.asm  set_permissions.asm  verify_permissions.asm  write_file.asm
